kube/1_masternodes/esmaster.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    service: elasticsearch
    tier: master
  name: elasticsearch-master
spec:
  replicas: 2
  selector:
    matchLabels:
      service: elasticsearch
      tier: master
  serviceName: elasticsearch
  template:
    metadata:
      labels:
        service: elasticsearch
        tier: master
        iteration: "1"
    spec:
      containers:
        - image: elasticsearch:7.17.5
          name: esmaster
          ports:
            - containerPort: 9200
            - containerPort: 9300
          resources:
            limits:
              memory: 1024Mi
          livenessProbe:
            tcpSocket:
              port: 9300
            successThreshold: 1
            failureThreshold: 2
            timeoutSeconds: 10
            periodSeconds: 5
            initialDelaySeconds: 10
          readinessProbe:
            httpGet:
              port: 9200
              path: /
            successThreshold: 2
            failureThreshold: 2
            timeoutSeconds: 10
            periodSeconds: 5
            initialDelaySeconds: 30
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: esdata
            - mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
              subPath: elasticsearch.yml
              name: esmaster-config
            - mountPath: /usr/share/elasticsearch/config/log4j2.properties
              subPath: log4j2.properties
              name: esmaster-config
            - mountPath: /data/capi_snapshots
              name: snapshots
              readOnly: true
      volumes:
        - name: esmaster-config
          configMap:
            name: esmaster-config
        - name: snapshots
          hostPath:
            path: /data/capi_snapshots
  volumeClaimTemplates:
    - metadata:
        name: esdata
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Mi
